--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
 <h1>Winofy</h1>
-<br />
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= link_to "My Bottles", bottles_path %></p>
+<nav>
+<%= link_to "My Bottles", bottles_path %>
+<hr />
+<%= link_to "Restaurants", restaurants_path %>
+</nav>
