Busted ass state of "Sticker" cloner

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -82,6 +82,10 @@
 	td.show {min-width:10px; text-align:center}
 	td.edit {min-width:10px; text-align:center}
 	td.destroy {min-width:10px; text-align:center}
+	.new_sticker {display: none;}
+	fieldset.stickers {border: 0 none;}
+	.new_selection {padding: 20px; border: 2px dotted #ddd; margin-bottom: 20px;}
+
 	
 </style>
 
